added section element

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 				</div>
 			</header>
 			<main role="main">
-				<div class="wrapper">
+				<section>
+					<div class="wrapper">
 
-				</div>
+					</div>
+				</section>
 			</main>
 		</div>
 		<footer role="contentinfo">
