--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<title>New Page</title>
-		<link rel="stylesheet" href="css/global.css">
+		<link rel="stylesheet" href="./css/global.css">
 	</head>
 	<body>
 		<div class="wrap">
@@ -26,6 +26,6 @@
 
 			</div>
 		</footer>
-		<script async src="js/scripts.min.js"></script>
+		<script async src="./js/scripts.min.js"></script>
 	</body>
 </html>
