--- a/404.html
+++ b/404.html
@@ -53,6 +53,6 @@
 </head>
 <body>
     <h1>Page Not Found</h1>
-    <p>Sorry, but the page you were trying to view does not exist.</p>
+    <p>Sorry, but the page you were trying to view does not exist. <a href="/">Back to home</a></p>
 </body>
 </html>
