added a loading animation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 		<link rel="stylesheet" href="./css/global.css">
 	</head>
 	<body>
-		<div class="wrap">
+		<div class="load">
+			<div class="spinner"></div>
+		</div>
+		<div class="wrap preload">
 			<header role="banner">
 				<div class="wrapper">
 
