added a few small comments

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<title>New Page</title>
+		<!-- seo filling here -->
 		<link rel="stylesheet" href="./css/global.css">
 	</head>
 	<body>
@@ -26,7 +27,7 @@
 		</div>
 		<footer role="contentinfo">
 			<div class="wrapper">
-
+				<p></p>
 			</div>
 		</footer>
 		<script async src="./js/scripts.min.js"></script>
