--- a/404.html
+++ b/404.html
@@ -10,6 +10,6 @@
 	</head>
 	<body>
 		<h1>Page Not Found</h1>
-		<p>Sorry, but the page you were trying to view does not exist; <a href="./">back to a page that exists</a></p>
+		<p>Sorry, but the page you were trying to view does not exist; <a href="./">back to a page that exists</a>.</p>
 	</body>
 </html>
