--- a/index.html
+++ b/index.html
@@ -22,7 +22,24 @@
 			<div class="spinner"></div>
 		</div>
 		<div class="wrap preload">
-			<?php require_once('inc/header.php'); ?>
+			<header role="banner">
+				<div class="wrapper">
+					<div class="group">
+						<div class="logo left">
+							<a href="/">KQL</a>
+						</div>
+						<div class="right menu-btn"><a href="#"></a></div>
+					</div>
+					<nav role="navigation">
+						<ul>
+							<li><a href="/">Home</a></li>
+							<li><a href="work.html">Work</a></li>
+							<li><a href="about.html">About</a></li>
+						</ul>
+						<a href="#" class="close-nav">x</a>
+					</nav>
+				</div>
+			</header>
 			<main role="main">
 				<section>
 					<div class="landing">
@@ -35,7 +52,16 @@
 				</section>
 			</main>
 		</div>
-		<?php require_once('inc/footer.php'); ?>
+		<footer role="contentinfo">
+			<div class="wrapper">
+				<ul class="group">
+					<li><a href="https://github.com/kqlambert" target="_blank"><img height="30px" src="i/github.svg" alt="codepen"></a></li>
+					<li><a href="http://codepen.io/kqlambert/" target="_blank"><img height="30px" src="i/codepen.svg" alt="codepen"></a></li>
+					<li><a href="https://twitter.com/kqlambert" target="_blank"><img height="30px" src="i/twitter.svg" alt="twitter"></a></li>
+					<li><a href="http://stackoverflow.com/users/714254/kqlambert" target="_blank"><img height="30px" src="i/stack.svg" alt="stack exchange"></a></li>
+				</ul>
+			</div>
+		</footer>
 		<script async src="./js/scripts.min.js"></script>
 	</body>
 </html>
