added htaccess file

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 			<div class="left half">
 				<div class="project">
 					<img src="i/lostpet.jpg" alt="lostpet image" width="100%">
-					<a href="http://lostpet.com" target="_blank" class="project-overlay">
+					<a href="#" class="project-overlay">
 						<div class="group">
 							<h3 class="left">Lostpet.com</h3>
 						</div>
